--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             let distance = cameraPosition.distanceTo(markerPosition)
 
             check = setInterval(() => {
-                cameraPosition = camera.object3D.position;
-                markerPosition = marker.object3D.position;
+                //cameraPosition = camera.object3D.position;
+                //markerPosition = marker.object3D.position;
                 distance = cameraPosition.distanceTo(markerPosition)
 
                 // do what you want with the distance:
