--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 distance = cameraPosition.distanceTo(markerPosition)
 
                 // do what you want with the distance:
-                console.log({ markerPosition });
+                console.log({ distance, ...markerPosition });
             }, 100);
         });
 
