--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
             if (distance > 0 && distance !== old) {
                 let pic = webcam.snap()
-                msg.innerHTML = JSON.stringify({ distance, position, rotation })
+                msg.innerHTML = JSON.stringify({ distance, position, rotation, pic })
                 old = distance
                 sounds[i++ & sounds.length].components.sound.playSound()
             }
