added lock and torch

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         z-index: 1;
     }
 
+    button#start {
+        font-size: large;
+    }
+
     div.gallery {
         height: 100px
     }
@@ -83,11 +87,6 @@
         });
     });
 
-
-  //The light will be on as long the track exists
-
-
-}
 
 
     /*
